--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "LICENSE",
     "readme.md"
   ],
-  "homepage": "https://github.com/ChiperSoft/Kalendae"
+  "homepage": "https://github.com/ChiperSoft/Kalendae",
+  "types": "types/kalendae.d.ts",
+  "dependencies": {
+    "@types/jquery": "^2.0.39",
+    "@types/moment": "^2.13.0"
+  }
 }
