--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "LICENSE",
     "readme.md"
   ],
-  "homepage": "https://github.com/Twipped/Kalendae"
+  "homepage": "https://github.com/Twipped/Kalendae",
+  "devDependencies": {
+    "uglify-js": "~3.1.6"
+  }
 }
